first page test

--- a/site/index.html
+++ b/site/index.html
@@ -5,9 +5,11 @@ Coursera Test
 </title>
 </head>
 <body>
+<h1>
+Testing Testing Testing
 <p>
 This is a test
 </p>
-</body>body>
+</body>
 </html>
 
