My First Page Again

--- a/site/index.html
+++ b/site/index.html
@@ -1,15 +1,11 @@
-<html>
+<htnml>
 <head>
-<title>
-Coursera Test
-</title>
-</head>
+<title>Hello Coursera JDF:)</title>
 <body>
-<h1>
-Testing Testing Testing
-<p>
-This is a test
-</p>
+	<h1>Hello from JDF Coursera</h1>
 </body>
-</html>
+</head>
+</htnml>
+
+
 
