My First Page Again

--- a/site/index.html
+++ b/site/index.html
@@ -3,6 +3,8 @@
 <title>Hello Coursera JDF:)</title>
 <body>
 	<h1>Hello from JDF Coursera</h1>
+<b>This is pretty cool</b>
+<i><ul>yes four apples please</ul></i>
 </body>
 </head>
 </htnml>
